# fgconfig

./: .fgfsrc  .gitattributes  .gitignore  .gitmodules  .python-version  CMakeLists.txt  DevPackage.rar  GroundTrack.kml.csv  README.md  camera-views.xml  f16-block-60.xml  fgcamer-hud.xml  fgfs.code-workspace  mingw-w64-toolchain.cmake  output.xml
Joystick/: .gitattributes  .gitignore  AHCP_CONFIG.txt  CMakeLists.txt  HOTAS_CONFIG.txt  JsApp.rc  JsApp.sln  JsApp.vcxproj  JsApp.vcxproj.filters  LMFD_CONFIG.txt  RMFD_CONFIG.txt  ReadMe.txt  STICK_CONFIG.txt  rohit-HeadSensorReciever.py
Joystick/include/: DeviceInterface.h  JsApp.h  JsAppDlg.h  js.h  ltypes.h  resource.h  stdafx.h  ul.h
Joystick/res/: JsApp.rc2
Joystick/src/: JsApp.cpp  JsAppDlg.cpp  UDPLanInterface.cpp  js.cxx  jsWindows.cxx  stdafx.cpp  ul.cxx
Mil/: CMakeCache.txt  CMakeLists.txt  CMakePresets.json  Makefile  Mil.cpp  Mil.h  README.md  cmake_install.cmake  main.cpp
Mil/example/: McxA429Wrapper.cs  McxAPIWrapper.cs  mcxB_V28B1.rbf
Mil/lib/: CommonTypes.h  McxAPI.h  McxAPI.lib  McxAPIReturnCodes.h
Mil/src/: BC.cpp  Monitor.cpp  MultiRTs.cpp  udp-listener.cpp
Nasal/: BC.cpp  BC_Restart.cpp  CMakeLists.txt
Scenarios/: 9g.xml  Ground_Targets_Goa.xml  Sea_Targets.xml  moving_targets_around_Goa.xml  moving_targets_around_KXTA.xml
Scenarios/FGtape and route manager/: vago  vago-vahb  voat  vobi-vago
config/: PTFM.xml  camera-views.xml  insgns-gps.xml  jsb-out.xml  jsb-out2.xml  modified_vobg.xml  route-kxta-ktnx.xml  routes.xml  target-track.xml  vobg.xml
config/targets/: climb_altitude.m  speedwithheading_altitude.m
joystick/: AHCP-v2.py  AHCP.py  AHCP_with_sender.py  CMakeLists.txt  CMakePresets.json  Pilot PG_Time.py  Pilot_PG_Time.py  Pilot_PG_Time_with_sender.py  README.md  T throttle warthog_Time.py  T_throttle_warthog_Time.py  T_throttle_warthog_Time_with_sender.py  VK1_Time.py  VK1_time_with_sender.py  VK_Time.py  VK_Time_with_sender.py  client.py  cobined.spec  combined.py  combined.spec  joystick.py  joystick.spec  joystick_log.txt  main.cpp  reciever.py  sender.py  server.py
restore_offsets/: platformio.ini
restore_offsets/src/: main.cpp
simulator/: .metadata  coordinates.cpp  eee.txt  ins.csv  pubspec.yaml  qwerty.txt  reciever.py
simulator/android/app/: build.gradle
simulator/android/app/src/main/: AndroidManifest.xml
simulator/android/app/src/main/kotlin/com/example/simulator/: MainActivity.kt
simulator/data/: airports.json
simulator/ios/Runner/: Info.plist
simulator/ios/Runner.xcodeproj/: project.pbxproj
simulator/lib/: main.dart
simulator/lib/data/: airports.dart
simulator/lib/models/: fg_args.dart  protocol.dart  route.dart  scenario.dart  target_scenario.dart
simulator/lib/screens/: aaa.json  home_screen.dart  home_screen1.dart  launch_manager.dart  menu_bar.dart  route_generator.dart  route_manager.dart  target_generator.dart  target_scenario.dart
simulator/lib/utils/: airscenario.dart  app_sytels.dart  components.dart  data_load.dart  fg_telnet.dart  fgfsrc.dart  file_handlers.dart  groundscenario.dart  menu_bar.dart  protocol.dart  route_sketch.dart  routexml.dart  service_handler.dart  xml.dart
simulator/lib/widgets/: fg_launcher.dart  route_options.dart  target_options.dart
simulator/lib/widgets/ai_scenario/: air_targets.dart  ground_targets.dart  sea_targets.dart
simulator/linux/: CMakeLists.txt
simulator/macos/Runner/: Info.plist
simulator/macos/Runner.xcodeproj/: project.pbxproj
simulator/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
simulator/macos/Runner/Configs/: AppInfo.xcconfig
simulator/test/: scenario.xml  trial_missile copy.xml
simulator/web/: index.html
simulator/windows/: CMakeLists.txt
simulator/windows/runner/: Runner.rc  main.cpp
targets/: 65 AIR TARGETS.xml  9g.xml  AIR_TARGET_NEW.xml  Ground_130_Targets.xml  Ground_Targets_Goa.xml  Sea_130_targets.xml  Sea_Targets.xml  TargetScenario.docx  headingwithclimb_altitude.m  online5Tar_ACM.xls  speedwithclimb_altitude.m  targets.ipynb
